<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Categoria extends Model
{
    use HasFactory;

    protected $table = 'categorias';
    protected $fillable = [
        'tipoCategoria'
    ];

    public function categoriaLibro(){
        return $this->hasMany(CategoriaLibro::class,'categoria_id');
    }
}
